# paramSim

./: CMakeLists.txt  Readme.md  bc_ensemble.cpp  cmdparser.cpp  cmdparser.hpp  convdiff_hdg.cpp  convdiff_hdg.hpp  geometrybase.hpp  run_case.cpp  verification.cpp
cases/: CMakeLists.txt  case.cpp  case.hpp  step51.cpp  step51.hpp
cases/convdiff/: CMakeLists.txt  convdiffcase.hpp  step51.cpp  step51.hpp
cases/poisson/: CMakeLists.txt  exps.cpp  exps.hpp  fourier.cpp  fourier.hpp  polynomial.cpp  polynomial.hpp  verify.cpp  verify.hpp
pdes/: CMakeLists.txt  pdebase.cpp  pdebase.hpp
pdes/convdiff/: CMakeLists.txt  convdiff_hdg.cpp  convdiff_hdg.hpp
pdes/poisson/: CMakeLists.txt  poisson_cg.cpp  poisson_cg.hpp
scripts/: ensemble.py  ensemble_case.json  run.py  setup_case.py
scripts/examples/: poisson_exp.json  poisson_fourier.json  poisson_polynomial.json
scripts/test/: context.py  run.py
